# watch-history-exporter-for-amazon-prime-video

./: .gitignore  Cargo.toml  README.md  biome.json  cleanup_report.md  config.template.js  exporter-test.js  import-data.csv  index.js  package-lock.json  package.json  project-metadata.json  resource_allocation_plan.md  rust_migration_plan.md  rust_rewrite_plan.md  watch-history-exporter-for-amazon-prime-video.js
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  question.yml
rust_rewrite/: Cargo.toml
rust_rewrite/src/: app.rs  cli.rs  config.rs  error.rs  main.rs  models.rs  shutdown.rs
rust_rewrite/src/metadata/: mod.rs  models.rs  provider.rs
rust_rewrite/src/metadata/clients/: imdb.rs  mal.rs  simkl.rs  tmdb.rs  tvdb.rs
rust_rewrite/src/processor/: csv_generator.rs  history_processor.rs  mod.rs  progress_tracker.rs
rust_rewrite/src/scraping/: browser.rs  extractor.rs  login.rs  mod.rs  models.rs  tests.rs
src/: main.rs  shutdown.rs
src/metadata/: mod.rs  models.rs  provider.rs
src/metadata/clients/: imdb.rs  mal.rs  mod.rs  simkl.rs  tmdb.rs  tvdb.rs
src/processor/: csv_generator.rs  history_processor.rs  mod.rs  progress_tracker.rs
src/scraping/: browser.rs  extractor.rs  mod.rs
