[package]
name = "primevideo-to-simkl-exporter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Export Amazon Prime Video watch history to Simkl CSV format"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] }
fantoccini = "0.17"
scraper = "0.12"
rayon = "1.7"

[dev-dependencies]
mockito = "1.0"
tempfile = "3.4"